--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,7 @@ kotlinVersion=1.4.21
 jacksonModuleVersion=2.12.1
 javaxPersistenceVersion=2.2
 okhttpVersion=4.2.2
+
+nexus.url=
+nexus.username=
+nexus.password=
